[package]
name = "libraw-rs-sys"
version = "0.0.4+libraw-0.21.3" # remember to update html_root_url
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
description = "FFI bindings to LibRaw"
license = "MIT/Apache-2.0"
repository = "https://github.com/paolobarbolini/libraw-rs"
categories = ["multimedia::images", "external-ffi-bindings"]
keywords = ["raw"]
readme = "README.md"
edition = "2021"
build = "build.rs"
include = ["src/lib.rs", "src/bindings.rs", "LICENSE-*", "README.md", "libraw/libraw/*", "libraw/src/*", "libraw/internal/*", "libraw/COPYRIGHT", "libraw/LICENSE.*", "build.rs"]
rust-version = "1.63"

[lib]
name = "libraw_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }
bindgen = { version = "0.69", default-features = false, features = ["runtime"], optional = true }
