[package]
name = "libraw-rs"
version = "0.0.4" # remember to update html_root_url
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
description = "LibRaw bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paolobarbolini/libraw-rs"
categories = ["multimedia::images", "api-bindings"]
keywords = ["raw"]
readme = "README.md"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "README.md"]
rust-version = "1.77"

[lib]
name = "libraw"

[dependencies]
libraw-rs-sys = { version = "0.0.4", path = "../libraw-sys" }

[features]
bindgen = ["libraw-rs-sys/bindgen"]
